src/client/chrome/css/popup.css
$banana: #FFDB5C;
$electric-blue: #4897D8;
$electric-blue-dark: #2B82CA;
$lime: #77f200;
$watermelon: #FA6E59;
$canteloupe: #F8A055;
$base-white: #FAFAFA;
$watermelon-dark: #F95339;
$canteloupe-dark: #F68828;

$base-color: #628AD7;
$secondary-color: #53D1C8;
$accent-color: #FFDD43;

$hindsite-black: #55524D ;
$light-grey: #e1e1e1 ;
$dark-grey: #a2a2a2 ;
$base-white: #fafafa ;

/* rainbow selection colors */
$h-red: #DB3535 ;
$h-green: #339882 ;
/*$h-red: #DB3535 ;
$h-orange: #EE6953 ;
$h-yellow: #F7AC2F ;
$h-teal: #34CCBB ;
$h-green: #339882 ;
$h-blue: #3F80D9 ;
$h-purple: #6454C9 ;*/

$site-font: 'Raleway', sans-serif;

body {
  overflow-x: hidden;
}

.html {
  height: auto;
}

.popup-content {
   width:400px;
   max-height: 300px;
   background-color: $base-white;
   color: $electric-blue;
   font-family: 'Raleway';
   font-weight: normal;
   vertical-align: middle;
}

.popup-header {
  flex-direction: column;
  display: flex;
  align-items: center;
  color: $base-white;
  width: 69px;
  margin-top: 2px;
  margin-right: 5px;
  &:hover{
    cursor: pointer;
    color: $banana;
    font-weight: bold;
  }
}

#hindsite{
  /*min-width: 400px;*/
  height: inherit;
  width: inherit;
  /*min-height: 452px;*/
}

.float-right{
  float:right;
}

.forgot-password-text{
  text-align: center;
  width: 70%;
  margin: 20px auto;
}

.popup-main-form h2 {
  text-align: center;
  margin-top: 0;
}

.popup-body p{
  margin: 2px 10px;
  text-align: center;
}

.popup-page-title {
  width: 90%;
  margin: 0 auto;
  display: flex;
  color: $base-white;
  align-items: center;
  justify-content: center;
  text-overflow: ellipsis;
}

.popup-page-title p{
  margin: 0;
  font-size: x-large;
}

.popup-form-group {
  margin: 3%;
  margin-bottom: 7%;
}



.login-form {
  border: none;
  border-radius: 0px;
  border-bottom: $base-white 1.5px solid;
  background: transparent;
  box-shadow: none;
  width: 90%;
  margin: auto;
  height: 40px;
  margin-bottom: 3%;
  color: $base-white;
  font-family: Raleway, FontAwesome;
  &:focus{
    box-shadow: none;
    border-bottom: $banana 1.5px solid;
    &::-webkit-input-placeholder {
      color: $banana;
    }
  }
  &::-webkit-input-placeholder {
    color: $base-white;
  }
}

.popup-form{
  border: none;
  border-radius: 0px;
  background: transparent;
  box-shadow: none;
  width: 90%;
  margin: auto;
  height: 40px;
  margin-bottom: 3%;
  color: $base-white;
  background-color: $electric-blue-dark;
  font-family: Raleway, FontAwesome;
  &:focus{
    box-shadow: none;
    &::-webkit-input-placeholder {
      color: $electric-blue;
    }
  }
  &::-webkit-input-placeholder {
    color: $base-white;
  }
}

.errorInput ::-webkit-input-placeholder {
   color: red;
}

.error-message{
  text-align: center;
}

.popup-main-form{
  padding: 5px;
  color: $base-white;
}

.popup-main-btn{
  width: 85%;
  display: block;
  margin: 3% auto;
  &:select{
    outline: none;
  }
}

.link-text-btn {
  display:block;
  margin: auto;
  color: $base-white;
  background:none;
  border:none;
  margin-bottom: 5%;
  &:hover{
    color: $banana;
  }
}

.logo{
  height: 40px;
  border: black;
  display: block;
  margin: 0 auto;
  margin-top: 3%;
}

.header-height{
  height: 30px;
}

.electric-blue{
  background: $electric-blue
}

.zero-margin{
  margin: 0;
}

.popup-header-text{
  font-size: 30px;
  margin-left: 2%;
  color: $banana;
  font-family: 'Poiret One', cursive;
  height: 35px;
}

.popup-header-wrapper{
  width: inherit;
  height: 55px;
  display: flex;
  padding: 0 7px;
  align-items: center;
  background-color: $electric-blue-dark;
  justify-content: space-between;
}

.popup-menu {
  display: flex;
  align-items: center;
  background-color: $watermelon-dark;
  justify-content: space-around;
  padding: 5px 15px;
}

.popup-menu-item {
  color: $base-white;
  font-size: medium;
  &.selected {
    color: $banana;
    font-weight: bold;
  }
  &:hover{
    cursor: pointer;
    color: $banana;
  }
}

.create-category-bar {
  display: flex;
}

.paginate-cats {
  display: inline-flex;
  flex-direction: row;
}

.change-page-btn {
  margin: auto;
}

.categories-container{
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  width: 75%;
}

.colors-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.popup-form-entry {
  margin: 0 auto;
  width: 89%;
  margin-bottom: 5px;
  background-color: $electric-blue-dark;
}

.color-square {
  display: inline-flex;
  width: 25px;
  height: 25px;
  margin: 7px 7px 14px 7px;
  cursor: pointer;

  &:hover{
    width: 27px;
    height: 27px;
    border: .5px solid $hindsite-black;
  }

}

.current-session {
  background-color: $electric-blue-dark;
  margin: 10px 0;
  border-radius: 3px;
  padding-bottom: 5px;
}

.current-session-info {
  margin: 10px;
  padding-top: 3px;
}

.site-logo{
    height: 30px;
    margin-top: 15%;
}

.duration-btn {
  width: auto;
  padding: 3px 5px;
  background-color: $electric-blue-dark;
  margin: 5px;
  display: inline-flex;
  &:hover{
    cursor: pointer;
    color: $banana;
    font-weight: bold;
  }
  &.active{
    color: $watermelon;
  }
}

.session-btn {
  width: auto;
  padding: 0 15px;
  background-color: $watermelon;
  margin: 5px auto;
  display: flex;
  &:hover{
    cursor: pointer;
    color: $banana;
    font-weight: bold;
  }
}

.new-session-info {
  margin-top: 5px;
}

#loading_page {
  position: absolute;
  top: 40%;
  left:5%;
}

#popup-error{
  padding: 2%;
  text-align: center;
  font-size: 15px;
}

#fa-error{
  font-size: xx-large;
  margin: 3%;
  color: $watermelon;
}

#logo-text-wrap{
  display: flex;
  flex-direction: column;
}

#go-to-timeline{
  /*margin-left: 3px;
  margin-top: 0px;
  padding-bottom: 5px;*/
  font-size: small;
  line-height: 16px;
}

#go-to-link{
  color: $banana;
  &:hover{
    color: $watermelon;
    cursor: pointer;
  }
}

/* SIDEBAR CSS */

.sidebar-box{
  width: 350px;
  margin-bottom: 5px;
  box-shadow: 0px 3px 15px rgba(0,0,0,0.5);

}

.sidebar-box-header{
  background-color: #628AD7;
  color: #fafafa;
  width:inherit;
  height: 50px;
  line-height: 50px;
  padding-left: 10px;
  font-size: large;
  position: relative;
  display: flex;
  cursor: pointer;
  justify-content: space-between;
}

.icon-caret{
  margin: 0px 20px;
}

.sidebar-box-content{
  background-color: #fafafa;
  /*color: $custom-black;*/
  width:inherit;
  height:300px;
  display: flex;
}

/* outermost box */
.sidebar{
  width: inherit;
  height: inherit;
}

/*.login-sidebar{
  width:400px;
  max-height: 300px;
  position: fixed;
  z-index: 2000;
}*/

/* tag selection box */
#tag-selection-wrapper{
  background-color: #fafafa;
  height: inherit;
  width: 350px;
}


#popup-header-logo{
  margin: 5px 0px 0px 0px;
}

.row{
  padding: 0px 15px;
  display: flex;
  align-items: center;
}

#row-url-entry{
  padding: 5px 0px;
  background-color: $light-grey;
  width: 350px;
  margin: 0px;
}

#favicon-url-entry{
  margin: 0px 12px 0px 8px;
  height: 32px;
}

#title-url-entry{
  font-size: large;
  width: 260px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  color: $hindsite-black;
}

.sidebar-form{
  font-size: large;
  width: 210px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  color: $hindsite-black;

  border: none;
  border-radius: 0px;
  background: transparent;
  box-shadow: none;
  margin: 0px;
  font-family: Raleway, FontAwesome;
  &:focus{
    box-shadow: none;
    border-bottom: $accent-color 1.5px solid;
  }
  &::-webkit-input-placeholder {
    color: $hindsite-black;
  }
}

/*.searchbar{
  border-bottom: $hindsite-black 1.5px solid;
  margin-left: 10px;
}*/

.Select-control {
    background-color: $base-white;
    border-color: none;
    border-radius: 0px;
    border: 0px;
    border-bottom: 2px solid #333;
  }

#row-searchbar{
  justify-content: center;
}


#edit-icon{
  color: $hindsite-black;
}

#categories-wrapper{
  margin: 15px 15px 0px 15px;
  height: 154px;
  overflow: hidden;
}

.category-bar{
  border-radius: 25px;
  max-width: 175px;
  margin: 1px 3px;
  display: inline-block;
  height: 29px;
  text-align: center;
  background-color: $base-white;
  line-height: 29px;
  padding: 0px 14px;
  width: inherit;
  cursor: pointer;
  margin: 1%;
}

.cat-button{
  border-radius: 25px;
  max-width: 175px;
  display: inline-block;
  height: 29px;
  text-align: center;
  background-color: $base-white;
  line-height: 29px;
  padding: 0px 10px;
  width: inherit;
  cursor: pointer;
  border: 2px solid $hindsite-black;
  color: $hindsite-black;
  margin: 1%;
  &:hover{
    color: $base-white;
    background-color: $hindsite-black;
  }
}

#popup-cat-button{
  margin: 0px 0px 0px 276px;
}
#close-row{
  height: 40px;
}

#row-tag-bottom{
  margin: 0px 15px;
  display: flex;
  padding: 0px;
  align-items: center;
  justify-content: center;
}

#category-create{
  width: inherit;
  height: 250px;
}

.row-createcategory{
  width:100%;
  padding:0px;
}

.exit-icon{
  float: right;
  cursor: pointer;
  margin: 1%;
  color: $hindsite-black;
  &:hover{
    color: $accent-color;
  }
}

#label-newtag{
  font-size: large;
  color: $hindsite-black;
  margin-left: 40px;
}

#new-cat-entry{
  justify-content: center;
  padding: 0px 40px;
  height: 179px;
  width: inherit;
}

#text-choose-color{
  font-size: larger;
  color: $hindsite-black;
  margin: 6px 2px 0px 2px;
}

.text-sidebar{
  color: $hindsite-black;
}

#input-newcat{
  font-size: large;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  color: $hindsite-black;
  border-bottom: $hindsite-black 2px solid;
  background: transparent;
  box-shadow: none;
  margin: 0px;
  font-family: Raleway, FontAwesome;
  &:focus{
    box-shadow: none;
    border-bottom: $accent-color 2px solid;
  }
  &:hover{
    box-shadow: none;
    border-bottom: $accent-color 2px solid;
  }
}

.text-black{
  color: $hindsite-black;
  font-size: medium;
}

.btn-new-cat{
  width: 80px;
  text-align: center;
  margin: 0px 5px;
  padding: 5px;
  cursor: pointer;
  font-size: larger;
  &:hover{
    color: $accent-color;
  }
}

#btn-new-cat-cancel{
  background-color: $light-grey;
  color: $hindsite-black;
}

#btn-new-cat-save{
  background-color: $base-color;
  color: $base-white;
}

.category-create-btns{
  display: flex;
  justify-content: center;
}

.caret{

}



/* LOGIN css */
.login-wrapper{
  width: 400px;
  height: 345px;
}

.signup-wrapper{
  width: 400px;
}

/* editnote css */
#editnote-wrapper{
  width: 350px;
  height: inherit;
  padding: 20px;
  margin: 0 auto;
}

#note-editing-box{
  height: 260px;
}

.textarea-custom{
  resize: none;
  border: none;
  background-color: transparent;

  &:focus, &:hover{
    outline: none;
    background-color: white;
  }
}

#note-text-edit{
  height:220px;
  width: 310px;
  color: $hindsite-black;
  font-size: small;
  padding: 5px 9px;
  background-color: white;
}

#note-text-edit-options{
  display: flex;
  color: $hindsite-black;
  height:40px;
  justify-content: flex-end;
  align-items: center;
}

.icon-hover{
  &:hover{
    color:$base-color;
    cursor: pointer;
  }
}

#icon-canceledit{
  color: $h-red;
  margin: 0px 4px;
}

#icon-saveedit{
  color: $h-green;
  margin: 0px 4px;
}

